[package]
name = "fiber-sphinx"
version = "1.0.0"
edition = "2021"
license-file = "COPYING.md"
description = "A Rust implementation of the Sphinx mix network."
documentation = "https://docs.rs/fiber-sphinx"
homepage = "https://github.com/cryptape/fiberer-sphinx"

[dependencies]
secp256k1 = { version = "0.28.0", features = ["serde"] }
sha2 = "0.10.8"
hmac = "0.12.1"
thiserror = "1.0"
chacha20 = "0.9.1"

[dev-dependencies]
hex-conservative = "0.2.1"
